syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.miranda.ot";
option java_outer_classname = "Fretes";
option objc_class_prefix = "HLW";

package com.miranda.ot;

service FretesService {
  rpc calculaFrete(CalculaFreteRequest) returns (ValorFreteResponse){}
}

message ErroDeMensagem{
  string mensagem = 1 ;
  string mensagem2 = 2;
}

message CalculaFreteRequest{
  string cep = 1;
}

message ValorFreteResponse{
  double valor = 1;
  string cep = 2;
}

message FretesRequest {
  string name = 1;
}

message FretesReply {
  string message = 1;
}